[package]
name = "back"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
# sqlx = "0.6.3"
anyhow = "1.0.70"
futures = "0.3.27"
async-stream = "0.3.4"
util = { path = "../util" }

[dependencies.tokio]
version = "1.26.0"
features = ["full"]

[dependencies.serde]
version = "1.0.158"
features = ["derive"]

[dependencies.chrono]
version = "0.4.24"
features = ["serde"]

[dependencies.surrealdb]
git = "https://github.com/surrealdb/surrealdb"
rev = "cad596cdf3f29eb3e9ea1100f1c02d51771c2cac"
features = ["kv-mem"]
# version = "1.0.0-beta.8"
# features = ["parallel", "kv-mem", "kv-rocksdb", "http"]
# no scripting

[dependencies.uuid]
version = "1.3.0"
# features = ["std", "v7"]
